chore: fixing broken ui and cleaning the code

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  overflow: hidden;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -21,11 +22,28 @@
 
 /* Codigo adicionado manualmente depois */
 .header {
-  position: fixed;
-  top: 0px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 5%;
+}
+
+.number-display {
+  background-color: black;
+  margin: 12px;
+  font-size: 54px;
+  font-weight: bolder;
+  border-radius: 8px;
 }
 
 .row-1, .row-2, .row-3, .row-4 {
   display: flex;
   flex-direction: row;
+}
+
+button {
+  padding: 32px;
+  margin: 7px;
 }
